// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<PromotionalCard
  classrooms={
    Array [
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "demo-6553451",
        "created_at": "2022-08-17 14:26:06.140275",
        "google_classroom_id": null,
        "grade": "9",
        "has_coteacher": false,
        "id": "484134",
        "name": "Quill Classroom Extremely Long So Long SUper Duper",
        "student_count": "5",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "van-guitar",
        "created_at": "2022-04-26 15:26:05.306719",
        "google_classroom_id": null,
        "grade": "6",
        "has_coteacher": false,
        "id": "484135",
        "name": "A New Class",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "writer-menu",
        "created_at": "2022-08-26 19:16:43.07067",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484137",
        "name": "2",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "cheese-ideal",
        "created_at": "2022-08-26 19:16:54.839985",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484139",
        "name": "4",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "poetry-stitch",
        "created_at": "2022-08-26 19:45:54.813954",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484148",
        "name": "13",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "dogs-fruit",
        "created_at": "2022-08-26 19:46:05.060615",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484150",
        "name": "15",
        "student_count": "0",
        "teacher_role": "owner",
      },
    ]
  }
  handleBulkArchiveSuccess={[MockFunction]}
  passedBulkArchiveCardClosedForRelevantYear={true}
  passedScoringUpdatesCardClosed={true}
  showEvidencePromotionCard={true}
  userId={1}
>
  <EvidencePromotionCard>
    <section
      className="evidence-promotion-card"
    >
      <div>
        <div
          className="badge-section"
        >
          <span
            className="new-tag"
          >
            NEW TOOL
          </span>
          <span
            className="title-tag"
          >
            QUILL READING FOR EVIDENCE
          </span>
        </div>
        <h2>
          Provide reading texts that enable students to write with evidence
        </h2>
        <div
          className="link-section"
        >
          <a
            href="undefined/teacher-center/introducing-quills-new-writing-and-reading-tool-quill-evidence"
          >
            <span>
              Learn more
            </span>
            <img
              alt="Arrow pointing right icon"
              src="undefined/images/icons/icons-arrow-back.svg"
            />
          </a>
          <a
            href="undefined/assign/activity-library?activityClassificationFilters[]=evidence"
          >
            <span>
              View activities
            </span>
            <img
              alt="Arrow pointing right icon"
              src="undefined/images/icons/icons-arrow-back.svg"
            />
          </a>
          <a
            href="undefined/tools/evidence"
          >
            <span>
              See tool demo
            </span>
            <img
              alt="Arrow pointing right icon"
              src="undefined/images/icons/icons-arrow-back.svg"
            />
          </a>
          <a
            href="https://docsend.com/view/29vcfdqa5aupkmfp"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span>
              Get the Teacher Handbook
            </span>
            <img
              alt="Arrow pointing right icon"
              src="undefined/images/icons/icons-arrow-back.svg"
            />
          </a>
        </div>
      </div>
    </section>
  </EvidencePromotionCard>
</PromotionalCard>
`;

exports[`PromotionalCard container BulkArchiveClassesCard rendering behavior when it is June or later in the calendar year should not render the card if no classes were created before July 1st of the current calendar year 1`] = `
<PromotionalCard
  classrooms={
    Array [
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "demo-6553451",
        "created_at": "2022-08-17 14:26:06.140275",
        "google_classroom_id": null,
        "grade": "9",
        "has_coteacher": false,
        "id": "484134",
        "name": "Quill Classroom Extremely Long So Long SUper Duper",
        "student_count": "5",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "van-guitar",
        "created_at": "2022-04-26 15:26:05.306719",
        "google_classroom_id": null,
        "grade": "6",
        "has_coteacher": false,
        "id": "484135",
        "name": "A New Class",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "writer-menu",
        "created_at": "2022-08-26 19:16:43.07067",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484137",
        "name": "2",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "cheese-ideal",
        "created_at": "2022-08-26 19:16:54.839985",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484139",
        "name": "4",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "poetry-stitch",
        "created_at": "2022-08-26 19:45:54.813954",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484148",
        "name": "13",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "dogs-fruit",
        "created_at": "2022-08-26 19:46:05.060615",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484150",
        "name": "15",
        "student_count": "0",
        "teacher_role": "owner",
      },
    ]
  }
  handleBulkArchiveSuccess={[MockFunction]}
  passedBulkArchiveCardClosedForRelevantYear={false}
  showEvidencePromotionCard={true}
  userId={1}
>
  <ScoringUpdatesCard
    handleCloseCard={[Function]}
  >
    <section
      className="scoring-updates-card"
    >
      <div>
        <div
          className="badge-section"
        >
          <span
            className="title-tag"
          >
            UPDATE FOR THE 2023-2024 SCHOOL YEAR
          </span>
        </div>
        <h2>
          Educators, we have updated our approach to scoring activities
        </h2>
        <div
          className="link-section"
        >
          <a
            href="undefined/teacher-center/introducing-quills-new-writing-and-reading-tool-quill-evidence"
          >
            <span>
              Learn more about Quill's updates to activity scores
            </span>
            <img
              alt="Arrow pointing right icon"
              src="undefined/images/icons/icons-arrow-back.svg"
            />
          </a>
        </div>
      </div>
      <button
        aria-label="Hide card until next school year"
        className="interactive-wrapper close-button"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          src="undefined/images/pages/dashboard/bulk_archive_close_icon.svg"
        />
      </button>
    </section>
  </ScoringUpdatesCard>
</PromotionalCard>
`;

exports[`PromotionalCard container BulkArchiveClassesCard rendering behavior when it is June or later in the calendar year should not render the card when it has already been closed for the current calendar year 1`] = `
<PromotionalCard
  classrooms={
    Array [
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "demo-6553451",
        "created_at": "2022-08-17 14:26:06.140275",
        "google_classroom_id": null,
        "grade": "9",
        "has_coteacher": false,
        "id": "484134",
        "name": "Quill Classroom Extremely Long So Long SUper Duper",
        "student_count": "5",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "van-guitar",
        "created_at": "2022-04-26 15:26:05.306719",
        "google_classroom_id": null,
        "grade": "6",
        "has_coteacher": false,
        "id": "484135",
        "name": "A New Class",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "writer-menu",
        "created_at": "2022-08-26 19:16:43.07067",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484137",
        "name": "2",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "cheese-ideal",
        "created_at": "2022-08-26 19:16:54.839985",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484139",
        "name": "4",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "poetry-stitch",
        "created_at": "2022-08-26 19:45:54.813954",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484148",
        "name": "13",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "dogs-fruit",
        "created_at": "2022-08-26 19:46:05.060615",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484150",
        "name": "15",
        "student_count": "0",
        "teacher_role": "owner",
      },
    ]
  }
  handleBulkArchiveSuccess={[MockFunction]}
  passedBulkArchiveCardClosedForRelevantYear={true}
  showEvidencePromotionCard={true}
  userId={1}
>
  <ScoringUpdatesCard
    handleCloseCard={[Function]}
  >
    <section
      className="scoring-updates-card"
    >
      <div>
        <div
          className="badge-section"
        >
          <span
            className="title-tag"
          >
            UPDATE FOR THE 2023-2024 SCHOOL YEAR
          </span>
        </div>
        <h2>
          Educators, we have updated our approach to scoring activities
        </h2>
        <div
          className="link-section"
        >
          <a
            href="undefined/teacher-center/introducing-quills-new-writing-and-reading-tool-quill-evidence"
          >
            <span>
              Learn more about Quill's updates to activity scores
            </span>
            <img
              alt="Arrow pointing right icon"
              src="undefined/images/icons/icons-arrow-back.svg"
            />
          </a>
        </div>
      </div>
      <button
        aria-label="Hide card until next school year"
        className="interactive-wrapper close-button"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          src="undefined/images/pages/dashboard/bulk_archive_close_icon.svg"
        />
      </button>
    </section>
  </ScoringUpdatesCard>
</PromotionalCard>
`;

exports[`PromotionalCard container BulkArchiveClassesCard rendering behavior when it is June or later in the calendar year should render the card if classes were created before July 1st of the current calendar year and it has not been closed for the current calendar year 1`] = `
<PromotionalCard
  classrooms={
    Array [
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "demo-6553451",
        "created_at": "2022-08-17 14:26:06.140275",
        "google_classroom_id": null,
        "grade": "9",
        "has_coteacher": false,
        "id": "484134",
        "name": "Quill Classroom Extremely Long So Long SUper Duper",
        "student_count": "5",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "van-guitar",
        "created_at": "2022-04-26 15:26:05.306719",
        "google_classroom_id": null,
        "grade": "6",
        "has_coteacher": false,
        "id": "484135",
        "name": "A New Class",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "writer-menu",
        "created_at": "2022-08-26 19:16:43.07067",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484137",
        "name": "2",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "cheese-ideal",
        "created_at": "2022-08-26 19:16:54.839985",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484139",
        "name": "4",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "poetry-stitch",
        "created_at": "2022-08-26 19:45:54.813954",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484148",
        "name": "13",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "dogs-fruit",
        "created_at": "2022-08-26 19:46:05.060615",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484150",
        "name": "15",
        "student_count": "0",
        "teacher_role": "owner",
      },
    ]
  }
  handleBulkArchiveSuccess={[MockFunction]}
  passedBulkArchiveCardClosedForRelevantYear={false}
  showEvidencePromotionCard={true}
  userId={1}
>
  <BulkArchiveClassesCard
    classrooms={
      Array [
        Object {
          "activity_count": 0,
          "clever_id": null,
          "code": "van-guitar",
          "created_at": "2022-04-26 15:26:05.306719",
          "google_classroom_id": null,
          "grade": "6",
          "has_coteacher": false,
          "id": "484135",
          "name": "A New Class",
          "student_count": "0",
          "teacher_role": "owner",
        },
      ]
    }
    handleCloseCard={[Function]}
    onSuccess={[MockFunction]}
  >
    <section
      className="bulk-archive-classes-card"
    >
      <div>
        <div
          className="badge-section"
        >
          <span
            className="title-tag"
          >
            HELPFUL TIP
          </span>
        </div>
        <h2>
          Start of a new school year?
        </h2>
        <p>
          Quickly archive last year's classes.
        </p>
        <div
          className="link-section"
        >
          <button
            className="interactive-wrapper"
            onClick={[Function]}
            type="button"
          >
            <span>
              Archive classes
            </span>
            <img
              alt="Arrow pointing right icon"
              src="undefined/images/icons/icons-arrow-back.svg"
            />
          </button>
        </div>
      </div>
      <button
        aria-label="Hide card until next school year"
        className="interactive-wrapper close-button"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          src="undefined/images/pages/dashboard/bulk_archive_close_icon.svg"
        />
      </button>
      <img
        alt=""
        className="illustration"
        src="undefined/images/pages/dashboard/bulk_archive_illustration.svg"
      />
    </section>
  </BulkArchiveClassesCard>
</PromotionalCard>
`;

exports[`PromotionalCard container BulkArchiveClassesCard rendering behavior when it is May or earlier in the calendar year should not render the card if no classes were created before July 1st of the previous calendar year 1`] = `
<PromotionalCard
  classrooms={
    Array [
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "demo-6553451",
        "created_at": "2022-08-17 14:26:06.140275",
        "google_classroom_id": null,
        "grade": "9",
        "has_coteacher": false,
        "id": "484134",
        "name": "Quill Classroom Extremely Long So Long SUper Duper",
        "student_count": "5",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "van-guitar",
        "created_at": "2022-04-26 15:26:05.306719",
        "google_classroom_id": null,
        "grade": "6",
        "has_coteacher": false,
        "id": "484135",
        "name": "A New Class",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "writer-menu",
        "created_at": "2022-08-26 19:16:43.07067",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484137",
        "name": "2",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "cheese-ideal",
        "created_at": "2022-08-26 19:16:54.839985",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484139",
        "name": "4",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "poetry-stitch",
        "created_at": "2022-08-26 19:45:54.813954",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484148",
        "name": "13",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "dogs-fruit",
        "created_at": "2022-08-26 19:46:05.060615",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484150",
        "name": "15",
        "student_count": "0",
        "teacher_role": "owner",
      },
    ]
  }
  handleBulkArchiveSuccess={[MockFunction]}
  passedBulkArchiveCardClosedForRelevantYear={false}
  showEvidencePromotionCard={true}
  userId={1}
>
  <ScoringUpdatesCard
    handleCloseCard={[Function]}
  >
    <section
      className="scoring-updates-card"
    >
      <div>
        <div
          className="badge-section"
        >
          <span
            className="title-tag"
          >
            UPDATE FOR THE 2023-2024 SCHOOL YEAR
          </span>
        </div>
        <h2>
          Educators, we have updated our approach to scoring activities
        </h2>
        <div
          className="link-section"
        >
          <a
            href="undefined/teacher-center/introducing-quills-new-writing-and-reading-tool-quill-evidence"
          >
            <span>
              Learn more about Quill's updates to activity scores
            </span>
            <img
              alt="Arrow pointing right icon"
              src="undefined/images/icons/icons-arrow-back.svg"
            />
          </a>
        </div>
      </div>
      <button
        aria-label="Hide card until next school year"
        className="interactive-wrapper close-button"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          src="undefined/images/pages/dashboard/bulk_archive_close_icon.svg"
        />
      </button>
    </section>
  </ScoringUpdatesCard>
</PromotionalCard>
`;

exports[`PromotionalCard container BulkArchiveClassesCard rendering behavior when it is May or earlier in the calendar year should not render the card when it has already been closed for the previous calendar year 1`] = `
<PromotionalCard
  classrooms={
    Array [
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "demo-6553451",
        "created_at": "2022-08-17 14:26:06.140275",
        "google_classroom_id": null,
        "grade": "9",
        "has_coteacher": false,
        "id": "484134",
        "name": "Quill Classroom Extremely Long So Long SUper Duper",
        "student_count": "5",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "van-guitar",
        "created_at": "2022-04-26 15:26:05.306719",
        "google_classroom_id": null,
        "grade": "6",
        "has_coteacher": false,
        "id": "484135",
        "name": "A New Class",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "writer-menu",
        "created_at": "2022-08-26 19:16:43.07067",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484137",
        "name": "2",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "cheese-ideal",
        "created_at": "2022-08-26 19:16:54.839985",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484139",
        "name": "4",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "poetry-stitch",
        "created_at": "2022-08-26 19:45:54.813954",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484148",
        "name": "13",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "dogs-fruit",
        "created_at": "2022-08-26 19:46:05.060615",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484150",
        "name": "15",
        "student_count": "0",
        "teacher_role": "owner",
      },
    ]
  }
  handleBulkArchiveSuccess={[MockFunction]}
  passedBulkArchiveCardClosedForRelevantYear={true}
  showEvidencePromotionCard={true}
  userId={1}
>
  <ScoringUpdatesCard
    handleCloseCard={[Function]}
  >
    <section
      className="scoring-updates-card"
    >
      <div>
        <div
          className="badge-section"
        >
          <span
            className="title-tag"
          >
            UPDATE FOR THE 2023-2024 SCHOOL YEAR
          </span>
        </div>
        <h2>
          Educators, we have updated our approach to scoring activities
        </h2>
        <div
          className="link-section"
        >
          <a
            href="undefined/teacher-center/introducing-quills-new-writing-and-reading-tool-quill-evidence"
          >
            <span>
              Learn more about Quill's updates to activity scores
            </span>
            <img
              alt="Arrow pointing right icon"
              src="undefined/images/icons/icons-arrow-back.svg"
            />
          </a>
        </div>
      </div>
      <button
        aria-label="Hide card until next school year"
        className="interactive-wrapper close-button"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          src="undefined/images/pages/dashboard/bulk_archive_close_icon.svg"
        />
      </button>
    </section>
  </ScoringUpdatesCard>
</PromotionalCard>
`;

exports[`PromotionalCard container BulkArchiveClassesCard rendering behavior when it is May or earlier in the calendar year should render the card if classes were created before July 1st of the previous calendar year and it has not been closed for the previous calendar year 1`] = `
<PromotionalCard
  classrooms={
    Array [
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "demo-6553451",
        "created_at": "2022-08-17 14:26:06.140275",
        "google_classroom_id": null,
        "grade": "9",
        "has_coteacher": false,
        "id": "484134",
        "name": "Quill Classroom Extremely Long So Long SUper Duper",
        "student_count": "5",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "van-guitar",
        "created_at": "2022-04-26 15:26:05.306719",
        "google_classroom_id": null,
        "grade": "6",
        "has_coteacher": false,
        "id": "484135",
        "name": "A New Class",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "writer-menu",
        "created_at": "2022-08-26 19:16:43.07067",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484137",
        "name": "2",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "cheese-ideal",
        "created_at": "2022-08-26 19:16:54.839985",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484139",
        "name": "4",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "poetry-stitch",
        "created_at": "2022-08-26 19:45:54.813954",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484148",
        "name": "13",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "dogs-fruit",
        "created_at": "2022-08-26 19:46:05.060615",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484150",
        "name": "15",
        "student_count": "0",
        "teacher_role": "owner",
      },
    ]
  }
  handleBulkArchiveSuccess={[MockFunction]}
  passedBulkArchiveCardClosedForRelevantYear={false}
  showEvidencePromotionCard={true}
  userId={1}
>
  <BulkArchiveClassesCard
    classrooms={
      Array [
        Object {
          "activity_count": 0,
          "clever_id": null,
          "code": "van-guitar",
          "created_at": "2022-04-26 15:26:05.306719",
          "google_classroom_id": null,
          "grade": "6",
          "has_coteacher": false,
          "id": "484135",
          "name": "A New Class",
          "student_count": "0",
          "teacher_role": "owner",
        },
      ]
    }
    handleCloseCard={[Function]}
    onSuccess={[MockFunction]}
  >
    <section
      className="bulk-archive-classes-card"
    >
      <div>
        <div
          className="badge-section"
        >
          <span
            className="title-tag"
          >
            HELPFUL TIP
          </span>
        </div>
        <h2>
          Start of a new school year?
        </h2>
        <p>
          Quickly archive last year's classes.
        </p>
        <div
          className="link-section"
        >
          <button
            className="interactive-wrapper"
            onClick={[Function]}
            type="button"
          >
            <span>
              Archive classes
            </span>
            <img
              alt="Arrow pointing right icon"
              src="undefined/images/icons/icons-arrow-back.svg"
            />
          </button>
        </div>
      </div>
      <button
        aria-label="Hide card until next school year"
        className="interactive-wrapper close-button"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          src="undefined/images/pages/dashboard/bulk_archive_close_icon.svg"
        />
      </button>
      <img
        alt=""
        className="illustration"
        src="undefined/images/pages/dashboard/bulk_archive_illustration.svg"
      />
    </section>
  </BulkArchiveClassesCard>
</PromotionalCard>
`;

exports[`PromotionalCard container ScoringUpdatesCard rendering behavior when the bulk archive classes card has been closed for the calendar year should render the ScoringUpdatesCard if it has not been closed for that user 1`] = `
<PromotionalCard
  classrooms={
    Array [
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "demo-6553451",
        "created_at": "2022-08-17 14:26:06.140275",
        "google_classroom_id": null,
        "grade": "9",
        "has_coteacher": false,
        "id": "484134",
        "name": "Quill Classroom Extremely Long So Long SUper Duper",
        "student_count": "5",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "van-guitar",
        "created_at": "2022-04-26 15:26:05.306719",
        "google_classroom_id": null,
        "grade": "6",
        "has_coteacher": false,
        "id": "484135",
        "name": "A New Class",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "writer-menu",
        "created_at": "2022-08-26 19:16:43.07067",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484137",
        "name": "2",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "cheese-ideal",
        "created_at": "2022-08-26 19:16:54.839985",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484139",
        "name": "4",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "poetry-stitch",
        "created_at": "2022-08-26 19:45:54.813954",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484148",
        "name": "13",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "dogs-fruit",
        "created_at": "2022-08-26 19:46:05.060615",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484150",
        "name": "15",
        "student_count": "0",
        "teacher_role": "owner",
      },
    ]
  }
  handleBulkArchiveSuccess={[MockFunction]}
  passedBulkArchiveCardClosedForRelevantYear={true}
  showEvidencePromotionCard={true}
  userId={1}
>
  <ScoringUpdatesCard
    handleCloseCard={[Function]}
  >
    <section
      className="scoring-updates-card"
    >
      <div>
        <div
          className="badge-section"
        >
          <span
            className="title-tag"
          >
            UPDATE FOR THE 2023-2024 SCHOOL YEAR
          </span>
        </div>
        <h2>
          Educators, we have updated our approach to scoring activities
        </h2>
        <div
          className="link-section"
        >
          <a
            href="undefined/teacher-center/introducing-quills-new-writing-and-reading-tool-quill-evidence"
          >
            <span>
              Learn more about Quill's updates to activity scores
            </span>
            <img
              alt="Arrow pointing right icon"
              src="undefined/images/icons/icons-arrow-back.svg"
            />
          </a>
        </div>
      </div>
      <button
        aria-label="Hide card until next school year"
        className="interactive-wrapper close-button"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          src="undefined/images/pages/dashboard/bulk_archive_close_icon.svg"
        />
      </button>
    </section>
  </ScoringUpdatesCard>
</PromotionalCard>
`;
